# gpu_notebook

./: ncu_log.txt  ncu_log_exetrem_mem.txt  readme.md
LeetGPU/: 001_vector_add.cu  002_matrix_multiply.cu  003_matrix_transpose.cu  004_color_inversion.cu  005_matrix_addition.cu  006_1D_conv.cu  007_reverse_array.cu  008_relu.cu  009_rainbow_table.cu  010_matrix_copy.cu  011_simple_inference.py  012_count_array_element.cu  013_count_2d_array_element.cu  014_sigmoid_linear_unit.cu  015_reduction.cu  016_softmax.cu  readme.txt
attention_layer/: atten_offical_test.py  atten_qk_fp16_fp16.py  atten_qk_int8_pv_int8.py  atten_qkv_int8.py  attention_naive.py
learn_triton/: what_not_be_done_on_gpu.py  what_not_be_done_on_gpu2.py  what_not_be_done_on_gpu3.py
learn_triton/llm_triton/optimize_attention/: attention_naive.py
learn_triton/llm_triton/triton_qwen/version_0/: sdpa_attention.py
softmax/: softmax_test.py
softmax/cpp/: CMakeLists.txt  readme.md  softmax_main.cpp
softmax/cpp/src/: profile_utils.cuh  softmax.cpp  softmax.hpp  softmax_0.cu  softmax_1.cu  softmax_2.cu  softmax_3.cu
